# PPA-FS25-World-Generation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  main.cpp  main.hpp  run_benchmarks.sh  run_cuda_bench.sh
src/: benchmark.hpp  cmd_parser.hpp  heightmap_gen.hpp  perlin_common.cuh  perlin_noise.hpp  perlin_noise_cpu.hpp  perlin_noise_cuda.cu  perlin_noise_cuda.hpp  perlin_noise_hybrid.cu  perlin_noise_hybrid.hpp  tree_gen.hpp
